Made test.html more readable and small fix in 2.css

--- a/2.css
+++ b/2.css
@@ -1,7 +1,7 @@
 /* stuff made by OoglyBooglyBoo  *
  * will merge with kvass.css     */
 
-#smallcontainer {                                       /* DONE */
+.smallcontainer {                                       /* DONE */
   width : 300px;
   height : auto;
   color: #01579B;
